--- a/liquor_sales/dbt_project.yml
+++ b/liquor_sales/dbt_project.yml
@@ -31,5 +31,13 @@ clean-targets:         # directories to be removed by `dbt clean`
 # files using the `{{ config(...) }}` macro.
 models:
   liquor_sales:
-    # Config indicated by + and applies to all files under models/example/
-    +materialized: view
+    # Config indicated by + and applies to all files under models
+    +materialized: table
+    # Config indicated by + and applies to all files under models/star/
+    star:
+      +materialized: table
+      +schema: star
+    # Config indicated by + and applies to all files under models/snowflake/
+    snowflake:
+      +materialized: table
+      +schema: snowflake
