--- a/london_bicycle/dbt_project.yml
+++ b/london_bicycle/dbt_project.yml
@@ -32,5 +32,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 models:
   london_bicycle:
     # Config indicated by + and applies to all files under models/example/
-    example:
-      +materialized: view
+    +materialized: table
+    star:
+      +materialized: table
+      +schema: star
