--- a/jaffle_shop/dbt_project.yml
+++ b/jaffle_shop/dbt_project.yml
@@ -2,11 +2,11 @@
 # Name your project! Project names should contain only lowercase characters
 # and underscores. A good package name should reflect your organization's
 # name or the intended use of these models
-name: 'shaffle_shop'
+name: 'jaffle_shop'
 version: '1.0.0'
 
 # This setting configures which "profile" dbt uses for this project.
-profile: 'shaffle_shop'
+profile: 'jaffle_shop'
 
 # These configurations specify where dbt should look for different types of files.
 # The `model-paths` config, for example, states that models in this project can be
@@ -30,6 +30,7 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  shaffle_shop:
-    # Config indicated by + and applies to all files under models/example/
+  jaffle_shop:
+
     +materialized: table
+    # Config indicated by + and applies to all files under models/example/
