update profiles with new keys

--- a/jaffle_shop/profiles.yml
+++ b/jaffle_shop/profiles.yml
@@ -4,11 +4,11 @@ jaffle_shop:
       dataset: jaffle_shop
       job_execution_timeout_seconds: 300
       job_retries: 1
-      keyfile: ../.service_keys/sctp-dbt-learn-15d36f52978f.json
+      keyfile: ../.keys/sctp-dbt-1f61d505397b.json
       location: US
       method: service-account
       priority: interactive
-      project: sctp-dbt-learn
+      project: sctp-dbt
       threads: 3
       type: bigquery
   target: dev
