--- a/jaffle_shop/snapshots/orders_snapshot.yml
+++ b/jaffle_shop/snapshots/orders_snapshot.yml
@@ -1,10 +1,10 @@
 snapshots:
-  - name: orders_snapshot
+  - name: orders_snapshot_check
     relation: source('jaffle_shop', 'orders')
     config:
       schema: snapshots
-      database: sctp-dbt
       unique_key: id
-      strategy: timestamp
-      updated_at: updated_at
-      dbt_valid_to_current: "to_date('9999-12-31')" # Specifies that current records should have `dbt_valid_to` set to `'9999-12-31'` instead of `NULL`.
+      strategy: check
+      check_cols:
+        - status
+        - is_cancelled
